# onajiyou

./: README.md  default.nix  onajiyou.cabal  pkg.nix  shell.nix  stack.yaml
data/: kradfile-u-clean.txt
src/: Data.hs  Main.hs  Parse.hs
